--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -25,5 +25,7 @@ framework:
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
 
+
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
+            App\Message\SendArticleNotification: async
