--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,3 +21,5 @@ services:
     App\EventListener\ArticleTimestampListener:
         tags:
             - { name: doctrine.orm.entity_listener }
+    App\Twig\AppExtension:
+        tags: ['twig.extension']
